# xoceania-sim

./: .gitignore  BUILD_SUMMARY.md  README.md  make_notebooks.py  pyproject.toml
_probe/: probe_b64.txt  probe_utf8.txt
app/: LOVABLE_PROMPT.md  README.md  app.js  export_twin.py  index.html  live.js  make_qr.py  pond.js  styles.css  tablet.html
app/assets/: icons.css  twin_data.js
configs/: catfish_alabama.yaml  vannamei_mekong.yaml
demo/: README.md  demo_live.ipynb  render.py  run_demo.py  xoceania_demo.py
manuscript/: paper1_simulator.md
notebooks/: 01_quickstart.ipynb  02_diurnal_exploration.ipynb  03_ammonia_toxicity.ipynb
src/xoceania_sim/: __init__.py  config.py  simulator.py
src/xoceania_sim/environments/: __init__.py  pond_env.py
src/xoceania_sim/forcing/: __init__.py  forcing.py  solar.py  weather.py
src/xoceania_sim/subsystems/: __init__.py  dissolved_oxygen.py  nitrogen.py  ph_carbon.py  phytoplankton.py  shrimp.py  temperature.py
src/xoceania_sim/validation/: __init__.py  boyd_dobudget.py  diurnal_validation.py  sensitivity.py
src/xoceania_sim/viz/: __init__.py  figures.py
tests/: __init__.py  test_carbonate.py  test_env.py  test_simulator.py  test_solar.py  test_subsystems.py  test_validation.py
